# meesign-server

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose-db.yml  docker-compose-dev.yml  docker-compose.yml  meesign-deployment-dev.yaml
.github/workflows/: deploy.yml  docker-nightly.yml  docker.yml  k8s.yml  rust.yml
docker/: Dockerfile.in  Dockerfile_aarch64  aarch64.conf  amd64.conf
docs/diagrams/: ServerDb.plantuml  meesign-erd.plantuml
manifests/: meesign-deployment-prod.yaml.in  meesign-deployment-prod.yaml.tmpl  meesign-service-prod.yaml
migrations/2022-08-10-092832_ProtocolType/: down.sql  up.sql
migrations/2022-08-10-092946_TaskType/: down.sql  up.sql
migrations/2022-08-10-093132_Device/: up.sql
migrations/2022-08-10-093346_TaskState/: down.sql  up.sql
migrations/2022-08-10-093832_SigningGroup/: up.sql
migrations/2022-08-10-094154_TaskResultType/: down.sql  up.sql
migrations/2022-12-25-190109_create_enums/: up.sql
migrations/2022-12-25-202725_create_device/: up.sql
migrations/2023-01-05-181737_create_signing_group/: up.sql
migrations/2023-01-05-181949_create_group_participant/: up.sql
migrations/2023-01-05-182113_create_task_result/: up.sql
migrations/2023-01-05-182231_create_task/: up.sql
migrations/2023-09-14-112003_create_task/: up.sql
src/: communicator.rs  device.rs  group.rs  main.rs  persistence.rs  rpc.rs  state.rs
src/db/: enums.rs  mod.rs  models.rs
src/interfaces/: grpc.rs  timer.rs
src/meesign_repository/: enums.rs  mod.rs  models.rs  (+1 more)
tests/: postgresMeesignRepo.rs
(+25 files in other folders)
