[package]
name = "meesign-server"
version = "0.1.0"
edition = "2018"

[dependencies]
tonic = "0.6"
prost = "0.9"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.0.0-alpha.1", features = ["v4", "fast-rng"] }
log = "0.4.16"
env_logger = "0.9.0"
hex = "0.4.3"
clap = { version = "3.1.8", features = ["derive"] }
dotenv = "0.15.0"
diesel = { version = "1.4.4", features = ["postgres", "r2d2"] }
diesel-derive-enum = { version = "1", features = ["postgres"] }

[build-dependencies]
tonic-build = "0.6"
